...
    icon: 'chatbubbles-outline',
    selectedIcon: 'chatbubbles',
  },
  {
    name: 'me',
    title: 'Me',
    testID: 'tab-me',
    icon: 'person-circle-outline',
    selectedIcon: 'person-circle',
  },
] as const;

export type PrimaryTabName = (typeof PRIMARY_TABS)[number]['name'];
...
